--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "clawra",
-  "version": "1.1.1",
+  "name": "clawra-selfie-sd",
+  "version": "1.0.0",
   "description": "Add selfie superpowers to your OpenClaw agent using local Stable Diffusion",
   "bin": {
     "clawra": "./bin/cli.js"
